--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,6 +5,12 @@
     %script{type: 'text/javascript', src: '/javascripts/bootstrap.min.js'}
     %script{type: 'text/javascript', src: '/javascripts/bootstrap-typeahead.js'}
     %script{type: 'text/javascript', src: '/javascripts/underscore-min.js'}
+    %script{type: 'text/javascript', src: '/javascripts/jquery.ui.core.js'}
+    %script{type: 'text/javascript', src: '/javascripts/jquery.ui.widget.js'}
+    %script{type: 'text/javascript', src: '/javascripts/jquery.ui.mouse.js'}
+    %script{type: 'text/javascript', src: '/javascripts/jquery.ui.draggable.js'}
+    %script{type: 'text/javascript', src: '/javascripts/jquery.ui.droppable.js'}
+    %script{type: 'text/javascript', src: '/javascripts/jquery.chess.js'}
     %script{type: 'text/javascript', src: '/javascripts/app.js'}
     %link{rel: 'stylesheet', type: "text/css", href: '/stylesheets/styles.css'}
     %link{rel: 'stylesheet', type: "text/css", href: '/stylesheets/bootstrap.min.css'}
