--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -25,10 +25,10 @@
   font-size: 20px;
   font-weight: bold;
 }
-.success{
+.won{
   color: #339966;
 }
-.failed{
+.lost{
   color: #CC3300;
 }
 .score {
