--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -24,10 +24,10 @@
   font-size: 20px;
   font-weight: bold; }
 
-.success {
+.won {
   color: #339966; }
 
-.failed {
+.lost {
   color: #CC3300; }
 
 .score {
