fixed apify link

--- a/views/index.haml
+++ b/views/index.haml
@@ -7,7 +7,7 @@
         %a{href: "https://github.com/serbanghita/jQuery-Chess"}
           jQuery Chess
         and
-        %a{href: "http://apify.heroku.com/resources", target: '_blank'}
+        %a{href: "http://apify.heroku.com/resources/4ff0b422d184620001000009", target: '_blank'}
           APIfy
         )
   .row
