--- a/views/layout.haml
+++ b/views/layout.haml
@@ -10,6 +10,7 @@
     %script{type: 'text/javascript', src: '/javascripts/jquery.ui.mouse.js'}
     %script{type: 'text/javascript', src: '/javascripts/jquery.ui.draggable.js'}
     %script{type: 'text/javascript', src: '/javascripts/jquery.ui.droppable.js'}
+    %script{type: 'text/javascript', src: '/javascripts/jquery.ui.touch-punch.min.js'}
     %script{type: 'text/javascript', src: '/javascripts/jquery.chess.js'}
     %script{type: 'text/javascript', src: '/javascripts/app.js'}
     %link{rel: 'stylesheet', type: "text/css", href: '/stylesheets/styles.css'}
